<resources>
    <string name="app_name">SanPedroAPP</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">correo del usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_agenda">Agenda</string>
    <string name="menu_misgrupos">Mis Grupos</string>
    <string name="menu_puntualidad">Puntualidad</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_seguimientoescolar">Seguimiento Escolar</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_share">Share</string>
    <string name="menu_configuraciones">Configuraciones</string>
    <string name="esta_semana">Esta semana</string>
    <string name="hoy">Hoy</string>
    <string name="dia_seleccionado">Dia seleccionado</string>
    <string name="llegadas_tarde_al_colegio">Llegadas tarde al colegio:</string>
    <string name="llgadas_tarde_al_sal_n">Llgadas tarde al salón:</string>
    <string name="inasistencias_sin_excusas">Inasistencias sin excusas:</string>
    <string name="inasistecias_con_excusas">Inasistecias con excusas:</string>
    <string name="string_desc">string/desc</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="developed_by">Developed by:</string>
    <string name="usuario">Usuario</string>
    <string name="noticias">Noticias</string>
    <string name="notas">Notas</string>
    <string name="esto_es_seguimiento_escolar">Esto es seguimiento Escolar</string>
    <string name="communicate">Communicate</string>
</resources>
