<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_misgrupos"
            android:icon="@drawable/ic_menu_misgrupos"
            android:title="@string/menu_misgrupos" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_menu_agenda"
            android:title="@string/menu_agenda" />

        <item
            android:id="@+id/nav_puntualidad"
            android:icon="@drawable/ic_menu_puntualidad"
            android:title="@string/menu_puntualidad" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/ic_menu_notas"
            android:title="@string/menu_notas" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_menu_noticias"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_seguimientoescolar"
            android:icon="@drawable/ic_menu_seguimientoescolar"
            android:title="@string/menu_seguimientoescolar" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_configuraciones"
                android:icon="@drawable/ic_configuraciones"
                android:title="@string/menu_configuraciones" />
        </menu>
    </item>

</menu>
