<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="198dp"
        android:contentDescription="@string/string_desc"
        app:layout_constraintBottom_toTopOf="@+id/et1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et2"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="225dp"
        android:layout_height="66dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="90dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/background_light"
        android:drawableLeft="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"
        android:onClick="login"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="40dp"
        android:text="@string/developed_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="225dp"
        android:layout_height="66dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />


</androidx.constraintlayout.widget.ConstraintLayout>